# DMS

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPORT_FIXES.md  LAUNCHER_README.md  LICENSE  README.md  README_KEYAUTH.md  REFACTORING_SUMMARY.md  SECURITY_FIXES.md  auth_launcher.py  bandit_results.txt  fix_linting.py  fix_linting_issues.py  gui_launcher.py  install_dependencies.py  launch.bat  launch.py  launch.sh  launch_auth.bat  launch_auth.sh  launch_gui.bat  launch_gui.sh  launcher.py  main.py  pyproject.toml  setup.py  test_auth.py  unified_launcher.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  test.yml
config/: keyauth_config.json  launcher_preferences.json  studio_config.yaml
data/: current_session.json  sessions.json
data/COCO/: annotations.json
data/auto_annotated/: batch_summary.json
data/projects/test_project/annotations/: sample_0.txt  test.txt
data/projects/test_project/exports/coco_export/: annotations.json
dms_venv310/Scripts/: activate  activate.bat
docs/: AUTHENTICATION_GUIDE.md  DEVELOPER_GUIDE.md  GUI_README.md  Makefile  README.md  USER_GUIDE.md
requirements/: requirements_amd.txt  requirements_auth.txt  requirements_base.txt  requirements_cpu.txt  requirements_gui.txt  requirements_nvidia.txt  requirements_quality.txt
scripts/: fix_linting_issues.py  launch.bat  launch.sh  launcher.py  unified_launcher.py
scripts/config/: launcher_preferences.json
src/: __init__.py  __main__.py  cli.py  config.py  studio.py
src/annotation/: __init__.py  __main__.py  annotation_interface.py  coco_exporter.py
src/auth/: __init__.py  __main__.py  auth_gui.py  auth_manager.py  clean_auth_gui.py  dependency_manager.py  keyauth_api.py  user_manager.py
src/auto_annotation/: __init__.py  acc_framework.py  auto_annotator.py  confidence_manager.py
src/capture/: __init__.py  __main__.py  image_processor.py  window_capture.py
src/gui/: __init__.py  main_window.py
src/gui/components/: __init__.py  annotation.py  capture.py  dashboard.py  project_manager.py  settings.py  system_monitor.py  training.py
src/gui/utils/: __init__.py  icons.py  styles.py
src/training/: __init__.py  __main__.py  yolo_trainer.py
src/utils/: __init__.py  bug_fixes.py  config.py  file_utils.py  hardware.py  logger.py  metrics.py  performance.py  production_validator.py  secure_subprocess.py  system_optimizer.py
tests/: __init__.py  conftest.py  run_tests.py  test_auth.py  test_config.py  test_core.py  test_export_validation.py  test_hardware.py  test_integration.py  test_metrics.py  test_utils.py
